--- a/LeafyLove.csproj
+++ b/LeafyLove.csproj
@@ -61,6 +61,9 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Utilities\RelayCommand.cs" />
     <Compile Include="ViewModels\PlantViewModel.cs" />
+    <Compile Include="Views\StartDialog.xaml.cs">
+      <DependentUpon>StartDialog.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -75,6 +78,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\StartDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -107,7 +114,6 @@
     <Folder Include="Resources\Icons\" />
     <Folder Include="Resources\Images\Plants\" />
     <Folder Include="Services\" />
-    <Folder Include="Views\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
