--- a/LeafyLove.csproj
+++ b/LeafyLove.csproj
@@ -109,10 +109,24 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Resources\Backgrounds\" />
     <Folder Include="Resources\Icons\" />
-    <Folder Include="Resources\Images\Plants\" />
     <Folder Include="Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Backgrounds\Day.png" />
+    <Resource Include="Resources\Backgrounds\Morning.png" />
+    <Resource Include="Resources\Backgrounds\Night.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\Plants\Mature.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\Plants\Seed.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\Plants\Sprout.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
