Магазин и небольшая переработка

--- a/LeafyLove.csproj
+++ b/LeafyLove.csproj
@@ -57,10 +57,12 @@
     </ApplicationDefinition>
     <Compile Include="Models\Achievement.cs" />
     <Compile Include="Models\OtherPlants.cs" />
+    <Compile Include="Models\StoreItem.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Utilities\RelayCommand.cs" />
     <Compile Include="Utilities\TimeOfDayToBackgroundConverter.cs" />
     <Compile Include="ViewModels\PlantViewModel.cs" />
+    <Compile Include="ViewModels\StoreViewModel.cs" />
     <Compile Include="Views\StartDialog.xaml.cs">
       <DependentUpon>StartDialog.xaml</DependentUpon>
     </Compile>
@@ -111,6 +113,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\Icons\" />
+    <Folder Include="Resources\Images\Plants\Lego\" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Backgrounds\Day.png" />
