--- a/LeafyLove.csproj
+++ b/LeafyLove.csproj
@@ -103,6 +103,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -139,6 +140,11 @@
     <Resource Include="Resources\Images\Plants\Gypsophila\GypsophilaMature.png" />
     <Resource Include="Resources\Images\Plants\Gypsophila\GypsophilaSeed.png" />
     <Resource Include="Resources\Images\Plants\Gypsophila\GypsophilaSprout.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\Plants\Lego\LegoMature.png" />
+    <Resource Include="Resources\Images\Plants\Lego\LegoSeed.png" />
+    <Resource Include="Resources\Images\Plants\Lego\LegoSprout.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
