--- a/LeafyLove.csproj
+++ b/LeafyLove.csproj
@@ -87,6 +87,8 @@
     <Compile Include="Models\OtherPlants.cs" />
     <Compile Include="Models\StoreItem.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Utilities\BooleanToThicknessConverter.cs" />
+    <Compile Include="Utilities\InverseBooleanConverter.cs" />
     <Compile Include="Utilities\RelayCommand.cs" />
     <Compile Include="Utilities\TimeOfDayToBackgroundConverter.cs" />
     <Compile Include="ViewModels\PlantViewModel.cs" />
@@ -102,7 +104,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Models\Fertilizer.cs" />
     <Compile Include="Models\Plant.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
